--- a/Views/Blog/Detail.cshtml
+++ b/Views/Blog/Detail.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
 	var blog = ViewBag.Blog;
 	ViewData["Title"] = blog.Name;
-	var time = new DateOnly();
 }
+
 @section Styles {
 	<link href="~/css/blog.css" rel="stylesheet">
 }
@@ -22,26 +22,23 @@
 		<div class="row">
 			<div class="col-lg-9">
 				<div class="singlepost">
-					<figure><img alt="" style="width:90px;height:500px" class="img-fluid" src="~/img/@blog.Thumbnail.Name"></figure>
-					<h1>@blog.Name/h1>
+					<figure><img alt="" class="img-fluid" src="~/img/blogs/@blog.Thumbnail.Name"></figure>
+					<h1>@blog.Name</h1>
 					<div class="postmeta">
 						<ul>
 							<li><a href="#"><i class="ti-folder"></i> @blog.Topic.Name</a></li>
-							<li><i class="ti-calendar"></i></li>
+							<li><i class="ti-calendar"></i> @blog.CreatedAt</li>
 							<li><a href="#"><i class="ti-user"></i> @blog.User.FullName</a></li>
 						</ul>
 					</div>
 					<!-- /post meta -->
 					<div class="post-content">
-						<p style="text-transform:uppercase">@blog.Slug</p>
-						<p>@blog.Content</p>
+						@Html.Raw(blog.Content)
 					</div>
 					<!-- /post -->
 				</div>
 				<!-- /single-post -->
-
-				<hr>
-
+			</div>
 			<!-- /col -->
 
 			<aside class="col-lg-3">
@@ -53,26 +50,45 @@
 				</div>
 				<!-- /widget -->
 				<div class="widget">
-				// 	<div class="widget-title">
-				// 		<h4>Latest Post</h4>
-				// 	</div>
-				// 	<ul class="comments-list">
-						
-				// 	</ul>
-				// </div>
-				// <!-- /widget -->
-				// <div class="widget">
-				// 	<div class="widget-title">
-				// 		<h4>Categories</h4>
-				// 	</div>
-				// 	<ul class="cats">
-				// 		<li><a href="#">Food <span>(12)</span></a></li>
-				// 		<li><a href="#">Places to visit <span>(21)</span></a></li>
-				// 		<li><a href="#">New Places <span>(44)</span></a></li>
-				// 		<li><a href="#">Suggestions and guides <span>(31)</span></a></li>
-				// 	</ul>
-				// </div>
+					<div class="widget-title">
+						<h4>Latest Post</h4>
+					</div>
+					<ul class="comments-list">
+						<li>
+							<div class="alignleft">
+								<a href="#0"><img src="img/blog-5.jpg" alt=""></a>
+							</div>
+							<small>Category - 11.08.2016</small>
+							<h3><a href="#" title="">Verear qualisque ex minimum...</a></h3>
+						</li>
+						<li>
+							<div class="alignleft">
+								<a href="#0"><img src="img/blog-6.jpg" alt=""></a>
+							</div>
+							<small>Category - 11.08.2016</small>
+							<h3><a href="#" title="">Verear qualisque ex minimum...</a></h3>
+						</li>
+						<li>
+							<div class="alignleft">
+								<a href="#0"><img src="img/blog-4.jpg" alt=""></a>
+							</div>
+							<small>Category - 11.08.2016</small>
+							<h3><a href="#" title="">Verear qualisque ex minimum...</a></h3>
+						</li>
+					</ul>
+				</div>
 				<!-- /widget -->
+				<div class="widget">
+					<div class="widget-title">
+						<h4>Categories</h4>
+					</div>
+					<ul class="cats">
+						<li><a href="#">Food <span>(12)</span></a></li>
+						<li><a href="#">Places to visit <span>(21)</span></a></li>
+						<li><a href="#">New Places <span>(44)</span></a></li>
+						<li><a href="#">Suggestions and guides <span>(31)</span></a></li>
+					</ul>
+				</div>
 				<!-- /widget -->
 			</aside>
 			<!-- /aside -->
