--- a/Areas/Admin/Views/Blogs/Edit.cshtml
+++ b/Areas/Admin/Views/Blogs/Edit.cshtml
@@ -1,106 +1,177 @@
-﻿@model ShoeShop.ViewModels.BlogViewModel;
-
-
-@{
-    ViewData["Title"] = "Edit";
+﻿@{
+    ViewData["Title"] = "Edit post";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    var post = ViewBag.Post;
 }
 @section Styles {
     <link rel="stylesheet" href="~/admin/js/plugins/select2/css/select2.min.css">
 }
+
 @section Scripts {
     <script src="~/admin/js/plugins/select2/js/select2.full.min.js"></script>
     <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
-    <script src="~/admin//js/blog/add-blog.js"></script >
-    <script>Dashmix.helpersOnLoad(['jq-select2', 'js-ckeditor']);</script>
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-<script>
-    function openFileInput() {
-        // Khi button được click, kích hoạt sự kiện click cho input file ẩn
-        document.getElementById('thumbnail').click();
-    }
+    <script>
+        Dashmix.onLoad(function () {
+            CKEDITOR.config.height = '400';
+            Dashmix.helpers(['jq-select2', 'js-ckeditor']);
+        });
 
-    // Sự kiện change của input file
-    document.getElementById('thumbnail').addEventListener('change', function () {
-        // Lấy tên file từ input file
-        var fileName = this.value.split('\\').pop();
+        $(document).ready(function () {
+            $('#btn-save').click(function (e) {
+                e.preventDefault();
+                if ($('#blog-form').valid()) {
+                    let jsonData = {
+                        IsPublic: $('#is-public').prop('checked'),
+                        Slug: $('#post-slug').val(),
+                        TopicId: $('#topic-id').val(),
+                        Description: $('#post-desc').val(),
+                        Image: $('#post-image')[0].files[0],
+                        Name: $('#post-title').val(),
+                        Content: CKEDITOR.instances['js-ckeditor'].getData()
+                    };
 
-        // Hiển thị tên file hoặc đường dẫn của file trong phần tử span
-        document.getElementById('imgPreview').src = fileName;
-    });
+                    let formData = new FormData();
+                    for (let key in jsonData) {
+                        formData.append(key, jsonData[key]);
+                    }
 
-</script>
+                    let id = $("#post-id").val();
 
+                    $.ajax({
+                        url: `/Admin/Blogs/Update/${id}`,
+                        type: 'POST',
+                        data: formData,
+                        processData: false,
+                        contentType: false,
+                        success: function (data) {
+                            console.log(data);
+                            window.location.href = '/Admin/Blogs/Index';
+                        },
+                        error: function (xhr, status, error) {
+                            console.error(error);
+                        }
+                    });
+                }
+            });
 
+            $('#blog-form').validate({
+                rules: {
+                    "post-title": {
+                        required: true
+                    },
+                    "topic-id": {
+                        required: true
+                    },
+                    "post-slug": {
+                        required: true
+                    },
+                    "post-desc": {
+                        required: true
+                    }
+                },
+                messages: {
+                    "post-title": {
+                        required: "Please enter a title"
+                    },
+                    "topic-id": {
+                        required: "Please choose a topic"
+                    },
+                    "post-desc": {
+                        required: "Please enter a description"
+                    }
+                }
+            });
+
+            jQuery(".js-select2").on("change", (e => {
+                jQuery(e.currentTarget).valid()
+            }));
+        });
+
+        document.getElementById('post-image').addEventListener('change', function (e) {
+            var previewImage = document.getElementById('imagePreview');
+            var fileInput = e.target;
+
+            if (fileInput.files && fileInput.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    previewImage.src = e.target.result;
+                    previewImage.style.display = 'block';
+                };
+                reader.readAsDataURL(fileInput.files[0]);
+            }
+        });
+    </script>
 }
 
-
-
-<form asp-action="Edit" id="blog-form" enctype="multipart/form-data">
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="col-8" style="background-color:white;display:block; margin:10px 250px">
-        <div class="block-header block-header-default" style="width:100%">
-            <h3 class="block-header-default" style="margin:10px">Edit Post</h3>
-        </div>
-        <div class="col-8" style="width:100%;padding:10px 100px">
-            <div class="form-group" >
-                <label class="form-label" asp-for="Image">Image</label>
-                <input type="file" id="thumbnail" class="form-control" accept="image/*" />
-                <img id="imagePreview" style="display:block; width: 400px; height: 350px; margin:10px 60px" src="~/img/blogs/@Model.Thumbnail.Name" />
+<form class="row g-0 flex-md-grow-1" id="blog-form" method="POST" onsubmit="return false;">
+    <input type="hidden" value="@post.Id" id="post-id"/>
+    <div class="col-md-4 col-lg-5 col-xl-3 order-md-1 bg-body-extra-light">
+        <div class="content p-0 m-0">
+            <!-- Toggle Settings -->
+            <div class="d-md-none p-3">
+                <!-- Class Toggle, functionality initialized in Helpers.dmToggleClass() -->
+                <button type="button" class="btn w-100 btn-alt-info" data-toggle="class-toggle" data-target="#side-content" data-class="d-none">
+                    Settings
+                </button>
             </div>
-
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" id="blog-name" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" id="blog-slug" />
-                <span asp-validation-for="Slug" class="text-danger"></span>
-            </div>
-             <div class="form-group">
-                <label asp-for="CreatedAt" class="control-label">Thời gian tạo</label>
-                <input asp-for="CreatedAt" class="form-control" readonly/>
-                <span asp-validation-for="CreatedAt" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.FullName" class="control-label">Tác giả</label>
-                <input asp-for="User.FullName" class="form-control" readonly />
-                <span asp-validation-for="User.FullName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TopicId" class="control-label">Chủ đề</label>
-                 <select asp-for="TopicId" class="form-control" asp-items="ViewBag.TopicId"></select>
-                <span asp-validation-for="TopicId" class="text-danger"></span>
-            </div>
-
-             <div class="form-group">
-                <label asp-for="Content" class="control-label">Nội dung</label>
-                <textarea id="js-ckeditor" asp-for="Content" class="form-control"></textarea>
-                <span asp-validation-for="Content" class="text-danger"></span>
-            </div>
-            
-            <div class="form-group" style="display:flex;justify-content:end;padding:10px 30px">
-                <div class="form-check form-check form-switch">
-                    <input asp-for="IsPublic" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" />
+            <!-- END Toggle Settings -->
+            <!-- Settings -->
+            <div id="side-content" class="d-none d-md-block push">
+                <div class="mb-0">
+                    <div class="block-content">
+                        <div class="form-check form-switch mb-2 d-flex justify-content-between ps-0">
+                            <label for="is-public" class="form-label">Public</label>
+                            <input id="is-public" name="is-public" class="form-check-input" type="checkbox" checked="@post.IsPublic" />
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" for="post-slug">Slug</label>
+                            <input value="@post.Slug" class="form-control" id="post-slug" name="post-slug">
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" for="topic-id">Topic</label>
+                            <select class="js-select2 form-select" id="topic-id" name="topic-id" style="width: 100%;" data-placeholder="Choose topic..">
+                                <option></option>
+                                @foreach (var topic in ViewBag.Topics)
+                                {
+                                    <option value="@topic.Id" selected="@(topic.Id == post.TopicID)">@topic.Name</option>
+                                }
+                            </select>
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" for="post-desc">Description</label>
+                            <textarea class="form-control" id="post-desc" name="post-desc" rows="2">@post.Description</textarea>
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" for="post-image">Image</label>
+                            <input type="file" id="post-image" name="post-image" class="form-control" accept="image/*" />
+                            <img id="imagePreview" class="img-thumbnail mt-2" src="~/img/blogs/@post.Thumbnail.Name" />
+                        </div>
+                    </div>
                 </div>
-                <label asp-for="IsPublic" class="control-label"></label>
             </div>
-
-            
-            <div class="mb-4 form-group" style="display:flex;justify-content:end;padding:10px 20px">
-                <button type="button" class="btn btn-danger" style="margin:10px"> <a asp-action="Index" style="color:white">Back to List</a></button>
-                <button type="submit" value="Create" id="btn-add-blog" class="btn btn-primary" style="width:100px;margin:10px">Save</button>
-            </div>
+            <!-- END Settings -->
         </div>
     </div>
+    <div class="col-md-8 col-lg-7 col-xl-9 order-md-0 bg-body-dark">
+        <!-- Main Content -->
+        <div class="content">
+            <div class="block block-rounded">
+                <div class="block-content">
+                    <div class="d-flex gap-2 mb-4">
+                        <div class="flex-fill">
+                            <input value="@post.Name" type="text" class="form-control" id="post-title" name="post-title" placeholder="Add Title..">
+                        </div>
+                        <button type="submit" class="btn btn-primary h-100" id="btn-save">Save</button>
+                    </div>
+                    <div class="mb-4">
+                        <textarea id="js-ckeditor" name="ckeditor">@post.Content</textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END Main Content -->
+    </div>
 </form>
-
- 
-
