--- a/Views/Blog/Detail.cshtml
+++ b/Views/Blog/Detail.cshtml
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="col-lg-9">
 				<div class="singlepost">
-					<figure><img alt="" class="img-fluid" src="~/img/blogs/@blog.Thumbnail.Name"></figure>
+					<figure style="text-align:center"><img alt="" class="img-fluid" src="~/img/blogs/@blog.Thumbnail.Name"></figure>
 					<h1>@blog.Name</h1>
 					<div class="postmeta">
 						<ul>
@@ -47,47 +47,6 @@
 						<input type="text" name="search" id="search" class="form-control" placeholder="Search..">
 						<button type="submit"><i class="ti-search"></i></button>
 					</div>
-				</div>
-				<!-- /widget -->
-				<div class="widget">
-					<div class="widget-title">
-						<h4>Latest Post</h4>
-					</div>
-					<ul class="comments-list">
-						<li>
-							<div class="alignleft">
-								<a href="#0"><img src="img/blog-5.jpg" alt=""></a>
-							</div>
-							<small>Category - 11.08.2016</small>
-							<h3><a href="#" title="">Verear qualisque ex minimum...</a></h3>
-						</li>
-						<li>
-							<div class="alignleft">
-								<a href="#0"><img src="img/blog-6.jpg" alt=""></a>
-							</div>
-							<small>Category - 11.08.2016</small>
-							<h3><a href="#" title="">Verear qualisque ex minimum...</a></h3>
-						</li>
-						<li>
-							<div class="alignleft">
-								<a href="#0"><img src="img/blog-4.jpg" alt=""></a>
-							</div>
-							<small>Category - 11.08.2016</small>
-							<h3><a href="#" title="">Verear qualisque ex minimum...</a></h3>
-						</li>
-					</ul>
-				</div>
-				<!-- /widget -->
-				<div class="widget">
-					<div class="widget-title">
-						<h4>Categories</h4>
-					</div>
-					<ul class="cats">
-						<li><a href="#">Food <span>(12)</span></a></li>
-						<li><a href="#">Places to visit <span>(21)</span></a></li>
-						<li><a href="#">New Places <span>(44)</span></a></li>
-						<li><a href="#">Suggestions and guides <span>(31)</span></a></li>
-					</ul>
 				</div>
 				<!-- /widget -->
 			</aside>
