--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -159,7 +159,7 @@
 														<a href="trackorder"><i class="ti-truck"></i>Track your Order</a>
 													</li>
 													<li>
-														<a asp-controller="authentication" asp-action="signin"><i class="ti-package"></i>My Orders</a>
+														<a asp-controller="account" asp-action="orders"><i class="ti-package"></i>My Orders</a>
 													</li>
 													<li>
 														<a asp-controller="account" asp-action="profile"><i class="ti-user"></i>My Profile</a>
