--- a/Views/Account/Detail.cshtml
+++ b/Views/Account/Detail.cshtml
@@ -68,14 +68,14 @@
                     <nav class="navbar navbar-expand-lg navbar-light bg-transparent pb-4 px-4">
                         <div class="d-flex align-items-center">
                             <i class="fas fa-align-left primary-text fs-4 me-3" id="menu-toggle"></i>
-                            <h5 class="m-0">Orders</h5>
+                            <h5 class="m-0">Order #@order.Id</h5>
                         </div>
                     </nav>
                     <div class="container-fluid px-4">
                         <div class="row mb-4">
-                            <div class="col-12 bg-white rounded shadow-sm p-2">
-                                <div class="d-flex justify-content-between align-items-center fs-7 fw-semibold mb-2">
-                                    <div>Description</div>
+                            <div class="col-12 bg-white rounded shadow-sm p-4">
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <p class="fs-5 fw-semibold mb-0">Description</p>
                                     <div> <i class="fa fa-clock me-2"></i>@order.CreatedAt</div>
                                 </div>
                                 <div class="alert alert-info">
@@ -139,7 +139,7 @@
                                                     <i class="fa fa-times text-danger fs-4"></i>
                                                     <p class="mb-0 fs-6">ORDER NOT CONFIRMED</p>
                                                 </div>
-                                                <button class="btn btn-hero btn-warning" id="btn-canceled">Canceled</button>
+                                                <button class="btn btn-danger" id="btn-canceled">Canceled</button>
                                                 break;
 
                                             case OrderStatus.Canceled:
