--- a/Views/Account/Orders.cshtml
+++ b/Views/Account/Orders.cshtml
@@ -15,7 +15,7 @@
 @section Styles {
     <link rel="stylesheet" href="~/css/profile.css">
     <link rel="stylesheet" href="~/admin/js/plugins/sweetalert2/sweetalert2.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
 }
 
 <main style="background-color: #efefef">
@@ -65,9 +65,9 @@
                     </nav>
                     <div class="container-fluid px-4">
                         <div class="row mb-4">
-                            <div class="col-12 bg-white rounded shadow-sm p-2">
-                                <div class="d-flex justify-content-end">
-                                    <div class="col-4">
+                            <div class="col-12 bg-white rounded shadow-sm p-4">
+                                <div class="d-flex justify-content-end mb-2">
+                                    <div class="col-12">
                                         <div class="input-group flex-nowrap">
                                             <span class="input-group-text" id="addon-wrapping"><i class="fa fa-fw fa-search"></i></span>
                                             <input type="text" class="form-control" id="order-query" name="order-query" placeholder="Search all orders..">
@@ -75,7 +75,7 @@
                                     </div>
                                 </div>
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-vcenter fs-sm" id="orders-table">
+                                    <table class="table table-vcenter fs-sm" id="orders-table">
                                         <thead>
                                             <tr>
                                                 <th class="text-center" style="width: 100px;">ID</th>
@@ -101,7 +101,7 @@
 @section Scripts {
     <script src="~/admin/js/plugins/sweetalert2/sweetalert2.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
-        //
+    <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
     <script>
         const formatDateTime = (apiDateString) => {
             const dateObject = new Date(apiDateString);
@@ -194,10 +194,9 @@
                     { "data": "createdAt", "name": "Submited", "autoWidth": true, "render": (data) => formatDateTime(data) },
                     {
                         "render": function (data, type, row) {
-                            return `<div class="btn-group">
-                                                <a href="/account/orders/detail/${row.id}" class="btn btn-sm btn-alt-secondary js-bs-tooltip-enabled" data-bs-toggle="tooltip" aria-label="Edit" data-bs-original-title="Edit">
-                                                  <i class="fa fa-fw fa-eye"></i>
-                                                </a>`;
+                            return `<a href="/account/orders/detail/${row.id}" class="btn btn-sm btn-alt-secondary" >
+                                                          <i class="fa fa-fw fa-eye"></i>
+                                                        </a>`;
                         }, "className": "text-center"
                     },
                 ],
