--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -9,12 +9,12 @@
 }
 
 
-.input-validation-error {
+.form-control.error,.input-validation-error {
     border-color: #fae5dd !important;
     background-color: #fae5dd !important;
 }
 
-.input-validation-error:focus {
+.form-control.error:focus,.input-validation-error:focus {
     border-color: #e04f1a;
     box-shadow: 0 0 0 0.25rem rgba(224, 79, 26, 0.25);
 }
